--- a/src/main/resources/com/fenrir/filesorter/controllers/FilterRuleEditorView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/FilterRuleEditorView.fxml
@@ -2,19 +2,21 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER"
-      maxHeight="-Infinity"
-      maxWidth="-Infinity"
-      minHeight="-Infinity"
-      minWidth="-Infinity"
-      xmlns="http://javafx.com/javafx/16"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.fenrir.filesorter.controllers.FilterRuleEditorController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.FilterRuleEditorController">
    <children>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+         <children>
+            <ComboBox fx:id="actionComboBox" prefWidth="150.0" />
+            <ComboBox fx:id="providerComboBox" prefWidth="150.0" />
+            <ComboBox fx:id="predicateComboBox" prefWidth="150.0" />
+            <TextField fx:id="argumentComboBox" />
+         </children>
+      </HBox>
       <TextField fx:id="ruleTextField" prefWidth="360.0" />
       <HBox alignment="CENTER" spacing="40.0">
          <children>
