--- a/src/main/resources/com/fenrir/filesorter/controllers/FilterRuleEditorView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/FilterRuleEditorView.fxml
@@ -2,33 +2,54 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.FilterRuleEditorController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.FilterRuleEditorController">
    <children>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-         <children>
-            <ComboBox fx:id="actionComboBox" prefWidth="150.0" />
-            <ComboBox fx:id="providerComboBox" prefWidth="150.0" />
-            <ComboBox fx:id="predicateComboBox" prefWidth="150.0" />
-            <TextField fx:id="argumentTextFiled" />
-         </children>
-      </HBox>
-      <TextField fx:id="ruleTextField" prefWidth="360.0" />
-      <HBox alignment="CENTER" spacing="40.0">
+      <TabPane fx:id="ruleEditorTabPane" prefHeight="100.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+            <Tab fx:id="ruleBuilderTab" text="Rule builder">
+                <content>
+                    <HBox alignment="CENTER" prefHeight="150.0" prefWidth="200.0" spacing="10.0">
+                        <children>
+                            <ComboBox fx:id="actionComboBox" prefWidth="150.0" />
+                            <ComboBox fx:id="providerComboBox" prefWidth="150.0" />
+                            <ComboBox fx:id="predicateComboBox" prefWidth="150.0" />
+                            <TextField fx:id="argumentTextFiled" />
+                        </children>
+                        <padding>
+                            <Insets left="20.0" right="20.0" />
+                        </padding>
+                    </HBox>
+                </content>
+            </Tab>
+            <Tab fx:id="expressionEditorTab" closable="false" text="Expression editor">
+                <content>
+                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                     <CheckBox fx:id="editExpressionCheckBox" mnemonicParsing="false" />
+                        <TextField fx:id="expressionTextField" disable="true" prefWidth="500.0">
+                        <HBox.margin>
+                           <Insets right="18.0" />
+                        </HBox.margin></TextField>
+                    </HBox>
+                </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="40.0">
          <children>
             <Button mnemonicParsing="false" onAction="#confirm" prefHeight="30.0" prefWidth="100.0" text="Confirm" />
             <Button mnemonicParsing="false" onAction="#cancel" prefHeight="30.0" prefWidth="100.0" text="Cancel" />
          </children>
          <VBox.margin>
-            <Insets top="20.0" />
+            <Insets bottom="10.0" />
          </VBox.margin>
       </HBox>
    </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
 </VBox>
