--- a/src/main/resources/com/fenrir/filesorter/controllers/FilterRuleEditorView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/FilterRuleEditorView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -12,21 +13,32 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.FilterRuleEditorController">
    <children>
-      <TabPane fx:id="ruleEditorTabPane" prefHeight="100.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="ruleEditorTabPane" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
             <Tab fx:id="ruleBuilderTab" text="Rule builder">
                 <content>
-                    <HBox alignment="CENTER" prefHeight="150.0" prefWidth="200.0" spacing="10.0">
-                        <children>
-                            <ComboBox fx:id="actionComboBox" prefWidth="150.0" />
-                            <ComboBox fx:id="providerComboBox" prefWidth="150.0" />
-                            <ComboBox fx:id="predicateComboBox" prefWidth="150.0" />
-                            <TextField fx:id="argumentTextFiled" />
-                        </children>
-                        <padding>
-                            <Insets left="20.0" right="20.0" />
-                        </padding>
-                    </HBox>
+                    <VBox spacing="20.0">
+                        <HBox fx:id="ruleBuilderHBox" alignment="CENTER" prefHeight="40.0" spacing="10.0">
+                            <children>
+                                <ComboBox fx:id="actionComboBox" prefWidth="173.0" visibleRowCount="20" />
+                                <Label text="if" />
+                                <ComboBox fx:id="providerComboBox" prefWidth="173.0" visibleRowCount="20" />
+                                <ComboBox fx:id="predicateComboBox" prefWidth="173.0" visibleRowCount="20" />
+                            </children>
+                        <VBox.margin>
+                           <Insets top="20.0" />
+                        </VBox.margin>
+                        </HBox>
+                          <HBox alignment="CENTER">
+                              <children>
+                                  <TextField fx:id="argumentTextFiled" HBox.hgrow="ALWAYS" />
+                              </children>
+                          </HBox>
+                     <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" text="+" />
+                     <padding>
+                        <Insets left="20.0" right="20.0" />
+                     </padding>
+                    </VBox>
                 </content>
             </Tab>
             <Tab fx:id="expressionEditorTab" closable="false" text="Expression editor">
