--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/input/DateInput.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/input/DateInput.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="inputHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.input.CategoryInputController">
+<HBox fx:id="inputHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.filter.input.DateInputController">
    <children>
-      <ChoiceBox fx:id="categoryChoiceBox" prefHeight="30.0" prefWidth="260.0" />
+      <DatePicker fx:id="datePicker" prefHeight="30.0" prefWidth="260.0" promptText="2021-12-01" HBox.hgrow="ALWAYS" />
       <Button mnemonicParsing="false" onAction="#deleteInputContainer" prefHeight="30.0" prefWidth="30.0" text="✕">
          <font>
             <Font size="18.0" />
