--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/input/DimensionInput.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/input/DimensionInput.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="inputHBox" alignment="CENTER" prefWidth="300.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.input.DimensionInputController">
+<HBox fx:id="inputHBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.filter.input.DimensionInputController">
    <children>
       <TextField fx:id="widthInputField" prefHeight="30.0" prefWidth="112.0" promptText="1920" HBox.hgrow="ALWAYS" />
       <Label prefHeight="30.0" text="✕" HBox.hgrow="ALWAYS">
