--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/FilterRuleBuilderView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/FilterRuleBuilderView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -19,7 +20,11 @@
             <Insets top="20.0" />
         </VBox.margin>
     </HBox>
-    <VBox fx:id="inputContainer" alignment="CENTER" spacing="10.0" />
+   <ScrollPane prefHeight="100.0" fitToWidth="true" fitToHeight="true">
+      <content>
+          <VBox fx:id="inputContainer" alignment="CENTER" spacing="10.0" />
+      </content>
+   </ScrollPane>
     <Button mnemonicParsing="false" onAction="#addInputField" prefHeight="30.0" prefWidth="30.0" text="+" />
     <padding>
         <Insets left="20.0" right="20.0" />
