rule builder view init

--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/rename/RenameRuleEditorView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/rename/RenameRuleEditorView.fxml
@@ -10,6 +10,7 @@
          <tabs>
             <Tab fx:id="ruleBuilderTab" text="Rule builder">
                <content>
+                  <fx:include fx:id="renameRuleBuilder" source="RenameRuleBuilderView.fxml"/>
                </content>
             </Tab>
             <Tab fx:id="expressionEditorTab" closable="false" text="Expression editor">
