input fields for new provideres

--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/input/FilePathInput.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/input/FilePathInput.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="inputHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.filter.input.PathInputController">
+<HBox fx:id="inputHBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.filter.input.FilePathInputController">
    <children>
       <TextField fx:id="inputTextField" prefHeight="30.0" promptText="xyz" HBox.hgrow="ALWAYS" />
       <Button mnemonicParsing="false" onAction="#selectPath" prefHeight="30.0" prefWidth="30.0" text="..." />
