--- a/src/main/resources/com/fenrir/filesorter/controllers/main/RuleTabView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/main/RuleTabView.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<SplitPane dividerPositions="0.25" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.main.RuleTabController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<SplitPane dividerPositions="0.25" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.main.RuleTabController">
     <items>
         <HBox prefHeight="100.0" prefWidth="200.0">
             <children>
@@ -12,6 +17,8 @@
                     <children>
                         <Button mnemonicParsing="false" onAction="#addRuleGroup" prefHeight="30.0" prefWidth="30.0" text="+" />
                         <Button fx:id="removeRuleGroupButton" mnemonicParsing="false" onAction="#removeRuleGroup" prefHeight="30.0" prefWidth="30.0" text="-" />
+                  <Button fx:id="saveRuleGroupButton" mnemonicParsing="false" onAction="#saveRuleGroup" prefHeight="30.0" prefWidth="30.0" text="S" />
+                  <Button fx:id="loadRuleGroupButton" mnemonicParsing="false" onAction="#loadRuleGroup" prefHeight="30.0" prefWidth="30.0" text="L" />
                         <Button fx:id="moveUpRuleGroupButton" mnemonicParsing="false" onAction="#moveUpRuleGroup" prefHeight="30.0" prefWidth="30.0" text="U" />
                         <Button fx:id="moveDownRuleGroupButton" mnemonicParsing="false" onAction="#moveDownRuleGroup" prefHeight="30.0" prefWidth="30.0" text="D" />
                     </children>
