--- a/src/main/resources/com/fenrir/filesorter/controllers/confirm/EditorConfirmView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/confirm/EditorConfirmView.fxml
@@ -5,7 +5,7 @@
 
 <?import javafx.geometry.Insets?>
 
-<HBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.fenrir.filesorter.controllers.editor.EditorConfirmController" alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="40.0">
+<HBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.fenrir.filesorter.controllers.confirm.EditorConfirmController" alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="40.0">
     <children>
         <Button mnemonicParsing="false" onAction="#confirm" prefHeight="30.0" prefWidth="100.0" text="Confirm" />
         <Button mnemonicParsing="false" onAction="#cancel" prefHeight="30.0" prefWidth="100.0" text="Cancel" />
