change name of EditorConfirmController to ConfirmController

--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/FilterRuleEditorView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/filter/FilterRuleEditorView.fxml
@@ -20,6 +20,6 @@
             </Tab>
         </tabs>
       </TabPane>
-       <fx:include fx:id="editorConfirm" source="../../confirm/EditorConfirmView.fxml" />
+       <fx:include fx:id="confirm" source="../../confirm/EditorConfirmView.fxml" />
    </children>
 </VBox>
