--- a/src/main/resources/com/fenrir/filesorter/controllers/save/LoadRuleGroupView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/save/LoadRuleGroupView.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.fenrir.filesorter.controllers.save.LoadRuleGroupView"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox fx:id="loadRuleGroupVBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.save.LoadRuleGroupController">
+   <ListView fx:id="ruleGroupListView" prefHeight="200.0" prefWidth="200.0" />
+    <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="40.0">
+        <children>
+            <Button fx:id="loadButton" mnemonicParsing="false" onAction="#load" prefHeight="30.0" prefWidth="100.0" text="Load" />
+            <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#delete" prefHeight="30.0" prefWidth="100.0" text="Delete" />
+            <Button mnemonicParsing="false" onAction="#cancel" prefHeight="30.0" prefWidth="100.0" text="Cancel" />
+        </children>
+        <VBox.margin>
+            <Insets bottom="10.0" />
+        </VBox.margin>
+    </HBox>
+    <padding>
+        <Insets left="20.0" right="20.0" top="20.0" />
+    </padding>
+</VBox>
