--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/rename/RenameRuleBuilderView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/rename/RenameRuleBuilderView.fxml
@@ -3,21 +3,17 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.rename.RenameRuleBuilderController">
-   <ScrollPane prefHeight="40.0" prefWidth="558.0" vbarPolicy="NEVER">
-      <content>
-         <ListView fx:id="selectedTokensListView" minWidth="558.0" orientation="HORIZONTAL" prefHeight="36.0" />
-      </content>
+   <ListView fx:id="selectedProvidersListView" editable="true" minWidth="558.0" orientation="HORIZONTAL" prefHeight="44.0">
       <VBox.margin>
          <Insets top="20.0" />
       </VBox.margin>
-   </ScrollPane>
+   </ListView>
     <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="100.0">
       <content>
-         <TreeView fx:id="tokenTreeView" prefHeight="200.0" prefWidth="200.0" />
+         <ListView fx:id="providerListView" prefHeight="200.0" prefWidth="200.0" />
       </content>
     </ScrollPane>
     <padding>
