--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/string/input/TextInputView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/string/input/TextInputView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="textInputVBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.rename.input.TextInputController">
+<VBox fx:id="textInputVBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="500.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.string.input.TextInputController">
     <Label text="Enter text" />
     <TextField fx:id="inputTextField" promptText="text" />
     <fx:include fx:id="confirm" source="../../../confirm/EditorConfirmView.fxml" />
