--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/string/rename/RenameRuleBuilderView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/string/rename/RenameRuleBuilderView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.rename.RenameRuleBuilderController">
+<VBox spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.string.rename.RenameRuleBuilderController">
    <ListView fx:id="selectedProvidersListView" editable="true" minWidth="558.0" orientation="HORIZONTAL" prefHeight="44.0">
       <VBox.margin>
          <Insets top="20.0" />
