--- a/src/main/resources/com/fenrir/filesorter/controllers/editor/string/rename/RenameRuleEditorView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/editor/string/rename/RenameRuleEditorView.fxml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.Tab?>
-<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.sort.SortRuleEditorController">
+<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fenrir.filesorter.controllers.editor.string.rename.RenameRuleEditorController">
    <children>
       <TabPane fx:id="ruleEditorTabPane" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
          <tabs>
             <Tab fx:id="ruleBuilderTab" text="Rule builder">
                <content>
-                  <fx:include fx:id="sortRuleBuilder" source="SortRuleBuilderView.fxml"/>
+                  <fx:include fx:id="stringRuleBuilder" source="RenameRuleBuilderView.fxml"/>
                </content>
             </Tab>
             <Tab fx:id="expressionEditorTab" closable="false" text="Expression editor">
                <content>
-                  <fx:include fx:id="expressionEditor" source="../ExpressionEditorView.fxml" />
+                  <fx:include fx:id="expressionEditor" source="../../ExpressionEditorView.fxml" />
                </content>
             </Tab>
          </tabs>
       </TabPane>
-      <fx:include fx:id="confirm" source="../../confirm/EditorConfirmView.fxml" />
+      <fx:include fx:id="confirm" source="../../../confirm/EditorConfirmView.fxml" />
    </children>
 </VBox>
