--- a/src/main/resources/com/fenrir/filesorter/controllers/main/SortTabView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/main/SortTabView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
@@ -18,6 +19,8 @@
                     <content>
                         <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="20.0">
                             <children>
+                        <ComboBox fx:id="actionComboBox" prefWidth="90.0" />
+                        <Label text="to" />
                                 <TextField fx:id="targetPathTextField" editable="false" HBox.hgrow="ALWAYS" />
                                 <Button mnemonicParsing="false" onAction="#choiceTargetDirectory" text="Choose" />
                             </children>
