--- a/src/main/resources/com/fenrir/filesorter/controllers/main/SortTabView.fxml
+++ b/src/main/resources/com/fenrir/filesorter/controllers/main/SortTabView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -30,6 +31,15 @@
                         </HBox>
                     </content>
                 </TitledPane>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <CheckBox fx:id="removeDirectories" mnemonicParsing="false" text="Removing empty directories after sort">
+                     <HBox.margin>
+                        <Insets bottom="20.0" top="20.0" />
+                     </HBox.margin>
+                  </CheckBox>
+               </children>
+            </HBox>
             </children>
             <BorderPane.margin>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
